--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,12 @@
 			<version>1.0</version>
 		</dependency>
 
-
+<dependency>
+    <groupId>net.sourceforge.cobertura</groupId>
+    <artifactId>cobertura</artifactId>
+    <version>2.0</version>
+    <scope>test</scope>
+</dependency>
 		</dependencies>
 
     <build>
