--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
 			<artifactId>xml-security-impl</artifactId>
 			<version>1.0</version>
 		</dependency>
+	    <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-project-info-reports-plugin</artifactId>
+    <version>2.7</version>
+</dependency>
 
 <dependency>
     <groupId>net.sourceforge.cobertura</groupId>
@@ -160,6 +165,7 @@
     <version>2.0</version>
     <scope>test</scope>
 </dependency>
+	    
 		</dependencies>
 
     <build>
