--- a/pom.xml
+++ b/pom.xml
@@ -160,9 +160,9 @@
 </dependency>
 
 <dependency>
-    <groupId>net.sourceforge.cobertura</groupId>
-    <artifactId>cobertura</artifactId>
-    <version>2.0</version>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>cobertura-maven-plugin</artifactId>
+    <version>2.7</version>
     <scope>test</scope>
 </dependency>
 	    
